--- a/electron/index.html
+++ b/electron/index.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/audio.css">
     <title>Sample playback</title>
   </head>
   <body>
-    <audio controls>
+    <audio id="music" controls="controls">
       <source src="silent_night.mp3" type="audio/mpeg">
     </audio>
+
+    <div id="player">
+      <button id="playButton" class="playing">play</button>
+    </div>
+
+    <script src="js/audio.js" type="text/javascript"></script>
   </body>
 </html>
