--- a/electron/index.html
+++ b/electron/index.html
@@ -6,12 +6,15 @@
     <title>Sample playback</title>
   </head>
   <body>
-    <audio id="music" controls="controls">
+    <audio id="music">
       <source src="silent_night.mp3" type="audio/mpeg">
     </audio>
 
     <div id="player">
       <button id="playButton" class="playing">play</button>
+      <div id="timeline">
+        <div id="playHead"></div>
+      </div>
     </div>
 
     <script src="js/audio.js" type="text/javascript"></script>
